# embedded-llama

./: README.embedded.md  README.md  embedded-cli.patch
.github/actions/get-tag-name/: action.yml
.github/workflows/: release.yml
scripts/embedded-cli/: reapply_overlays.py
src/: unicode.cpp
tools/: CMakeLists.txt
tools/embedded-cli/: CMakeLists.txt  embedded-cli.cpp
